# grilo-mediaserver2

./: AUTHORS  Makefile.am  autogen.sh  configure.ac  grilo-mediaserver2.doap  mediaserver1.pc.in  mediaserver2.pc.in  meson.build  rygel-grilo.doap
data/: Makefile.am  grilo-mediaserver2.conf  media-container.xml  media-container1.xml  media-item.xml  media-object.xml  media-server2.xml  rygel-grilo.conf
lib/: Makefile.am  media-server1-client.c  media-server1-client.h  media-server1-common.h  media-server1-introspection.h  media-server1-observer.c  media-server1-observer.h  media-server1-private.h  media-server1-server-table.c  media-server1-server.c  media-server1-server.h  media-server2-client-glue.h  media-server2-client.c  media-server2-client.h  media-server2-common.h  media-server2-glue.h  media-server2-introspection.h  media-server2-observer.c  media-server2-observer.h  media-server2-private.h  media-server2-server-glue.h  media-server2-server-private.h  media-server2-server-table.c  media-server2-server.c  media-server2-server.h  media-server2.c  meson.build
src/: Makefile.am  dgrilo-media-container-glue.h  dgrilo-media-container.c  dgrilo-media-container.h  dgrilo-media-item-glue.h  dgrilo-media-item.c  dgrilo-media-item.h  dgrilo-media-object-glue.h  dgrilo-media-object.c  dgrilo-media-object.h  dgrilo.c  grilo-mediaserver2.c  grilo-ms-media-container.c  grilo-ms-media-container.h  grilo-ms-media-item.c  grilo-ms-media-item.h  grilo-ms-media-object.c  grilo-ms-media-object.h  grilo-ms.c  main.c  meson.build  rygel-grilo-media-container-glue.h  rygel-grilo-media-container.c  rygel-grilo-media-container.h  rygel-grilo-media-item-glue.h  rygel-grilo-media-item.c  rygel-grilo-media-item.h  rygel-grilo-media-object-glue.h  rygel-grilo-media-object.c  rygel-grilo-media-object.h  rygel-grilo-media-server-glue.h  rygel-grilo-media-server.c  rygel-grilo-media-server.h  rygel-grilo.c  test-client.c
